Test/git-issues/git-issue-551.dfy.expect
git-issue-551.dfy(27,15): Error: predicate calls are allowed only in specification contexts (consider declaring the predicate a 'predicate method')
1 resolution/type errors detected in git-issue-551.dfy
